--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <main class="container">
         <section class="logo">
-            <img src="./assets/logo-vidracaria.png" alt="">
+            <img src="./assets/logo-vidracaria.png" alt="Logo ">
         </section>
         <form action="">
             <h1 class="text">Login</h1>
